# docs/swagger.yaml
@@ -101,13 +101,6 @@ definitions:
     - quantity
     - total_amount
     type: object
-  types.Category:
-    properties:
-      image:
-        type: string
-      title:
-        type: string
-    type: object
   types.Invoice:
     properties:
       order_id:
@@ -202,157 +195,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /categeory/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a category
-      parameters:
-      - description: Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Category ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Delete a category
-      tags:
-      - Admin
-    get:
-      consumes:
-      - application/json
-      description: Get a category
-      parameters:
-      - description: Category ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Get a category
-      tags:
-      - User
-    put:
-      consumes:
-      - application/json
-      description: Update a category
-      parameters:
-      - description: Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Category ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Category
-        in: body
-        name: category
-        required: true
-        schema:
-          $ref: '#/definitions/types.Category'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Update a category
-      tags:
-      - Admin
-  /categories:
-    get:
-      consumes:
-      - application/json
-      description: Get all categories
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Get all categories
-      tags:
-      - Global
-    post:
-      consumes:
-      - application/json
-      description: Create a category
-      parameters:
-      - description: Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Category
-        in: body
-        name: category
-        required: true
-        schema:
-          $ref: '#/definitions/types.Category'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      security:
-      - BearerAuth: []
-      summary: Create a category
-      tags:
-      - Admin
   /food:
     post:
       consumes:
