# routes/catgeoryRouter.go
@@ -6,7 +6,7 @@ import (
 )
 
 func CatgeoryRoutes(c *gin.Engine) {
-	c.GET("/categeory/:id", controllers.GetCategory)
+	c.GET("/categeory/:id", controllers.GetCategories)
 	c.POST("/categories", controllers.CreateCategory)
 	c.PUT("/categeory/:id", controllers.UpdateCategory)
 	c.DELETE("/categeory/:id", controllers.DeleteCategory)
